added more docs on uri and file system. dcmntSpace now handles +/+/+ /+/+ and /+ pattern. Save for the root constriant, dcmntSpace is on par with tbleSpace and memSpace. Doc rebuild.